// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"name" option should chunkFilename suffix be inserted before query parameters: errors 1`] = `Array []`;

exports[`"name" option should chunkFilename suffix be inserted before query parameters: module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"worker.worker.js\\");
}
"
`;

exports[`"name" option should chunkFilename suffix be inserted before query parameters: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"name" option should chunkFilename suffix be inserted before query parameters: result 2`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"name" option should chunkFilename suffix be inserted before query parameters: warnings 1`] = `Array []`;

exports[`"name" option should work ("string"): errors 1`] = `Array []`;

exports[`"name" option should work ("string"): module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"test.worker.js\\");
}
"
`;

exports[`"name" option should work ("string"): result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"name" option should work ("string"): warnings 1`] = `Array []`;

exports[`"name" option should work and respect the "output.chunkFilename" default value option: errors 1`] = `Array []`;

exports[`"name" option should work and respect the "output.chunkFilename" default value option: module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"worker.worker.js\\");
}
"
`;

exports[`"name" option should work and respect the "output.chunkFilename" default value option: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"name" option should work and respect the "output.chunkFilename" default value option: warnings 1`] = `Array []`;

exports[`"name" option should work and respect the "output.chunkFilename" option ("string"): errors 1`] = `Array []`;

exports[`"name" option should work and respect the "output.chunkFilename" option ("string"): module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"worker.worker.js\\");
}
"
`;

exports[`"name" option should work and respect the "output.chunkFilename" option ("string"): result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"name" option should work and respect the "output.chunkFilename" option ("string"): warnings 1`] = `Array []`;
